Cater for empty content text searches in LuceneContentManager.google().